--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: build
 
 steps:
 - name: 拉取代码
-  image: alpine
+  image: rastasheep/ubuntu-sshd:18.04
   commands:
   - apt install git -y
   - git clone https://github.com/v2board/v2board-docker.git
