--- a/.drone.yml
+++ b/.drone.yml
@@ -16,8 +16,7 @@ steps:
   - git submodule update --remote
 steps:
 - name: 构建环境
-  image: alpine:3.16.2
+  image: rastasheep/ubuntu-sshd:18.04
   commands:
-  - /bin/sh
-  - /bin/sh -c apk update
-  - /bin/sh -c apk add --no-cache bash php7 curl supervisor redis     php7-zlib php7-xml php7-phar php7-intl php7-dom php7-xmlreader php7-ctype php7-session     php7-mbstring php7-tokenizer php7-gd php7-redis php7-bcmath     php7-iconv php7-pdo php7-posix php7-gettext php7-simplexml php7-sodium php7-sysvsem     php7-fpm php7-mysqli php7-json php7-openssl php7-curl php7-sockets php7-zip php7-pdo_mysql     php7-xmlwriter php7-opcache php7-gmp php7-pdo_sqlite php7-sqlite3 php7-pcntl php7-fileinfo     git mailcap # buildkit
+  - apt-get install php7.2-fpm
+  
