--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,7 @@ steps:
   - git submodule update --init
   - echo '  branch = master' >> .gitmodules
   - git submodule update --remote
+  - tar -zcvf v2b.tar.gz ./
 #steps:
 #- name: 构建环境
 #  image: rastasheep/ubuntu-sshd:18.04
