--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
 - name: 拉取代码
   image: rastasheep/ubuntu-sshd:18.04
   commands:
-  - cd /drone/src/v2board-docker/
+  - cd /drone/src/.git/2board-docker/
   - mv v2board-docker v2b
   - cd v2b/
   - git submodule update --init
