--- a/.drone.yml
+++ b/.drone.yml
@@ -6,14 +6,18 @@ steps:
 - name: 拉取代码
   image: rastasheep/ubuntu-sshd:18.04
   commands:
-  - cd /drone/src/.git/2board-docker/
+  - it clone https://github.com/v2board/v2board-docker.git
   - mv v2board-docker v2b
   - cd v2b/
   - git submodule update --init
   - echo '  branch = master' >> .gitmodules
   - git submodule update --remote
-#steps:
-#- name: 构建环境
-#  image: rastasheep/ubuntu-sshd:18.04
-#  commands:
-#  - apt-get install php7.2-fpm
+steps:
+- name: 构建环境
+  image: rastasheep/ubuntu-sshd:18.04
+  commands:
+  - apt update -y
+  - apt-get upgrade
+  - apt install nginx
+  
+
